Update mod version to 0.4.0; refactor PlayerSkinBaker for improved texture handling and add body frame calculations in emote preparation